minor color change

--- a/aWebsite/css/MenuMatic.css
+++ b/aWebsite/css/MenuMatic.css
@@ -91,7 +91,7 @@
 	-moz-border-radius: 8px;
 	-webkit-border-radius: 8px;
 	background:#fff;	
-	border:1px solid #C3D46A;
+	border:1px solid #004d3b;
 	left:0;
 }
 
