--- a/aWebsite01/css/style.css
+++ b/aWebsite01/css/style.css
@@ -130,15 +130,15 @@ strong em {
 }
 
 #container {
-    display: inline-block;
-    position: absolute;
+    display: block;
+    position: relative;
     padding: 0;
     width: 100%;
-    height: 50%;
+    height: 100%;
     background: #fff;
     top: 50%;
     margin: -100px 0 0 0;
-    border: solid #333;
+/*    border: solid #333;*/
     border-width: 3px 0 3px 0;
     opacity: 0.90;
     -moz-opacity: 0.90;
@@ -171,8 +171,8 @@ strong em {
 
 #footer {
     color: #ff4046;
-    position: absolute;
-    bottom: 0;
+    position: relative;
+    bottom: -100%;
     margin: 0;
     width: 100%;
     text-align: center;
