--- a/aWebsite01/css/style.css
+++ b/aWebsite01/css/style.css
@@ -4,7 +4,7 @@ html {
     text-align: center;
     margin: 0 auto;
     padding: 0;
-    /*    background: url(../img/bg.gif) center center #ffbc40;*/
+    /*    background: url(../img/bg.gif) center center;*/
     
     overflow: scroll;
 }
@@ -19,6 +19,11 @@ body {
     font-family: Arial, Helvetica, sans-serif;
     font-size: 14px;
     line-height: 1.5em;
+}
+
+canvas {
+    position: absolute;
+    z-index: 10;
 }
 
 a:link {
@@ -130,15 +135,16 @@ strong em {
 }
 
 #container {
-    display: block;
+    display: inline-block;
     position: relative;
     padding: 0;
     width: 100%;
-    height: 100%;
+    height: 50%;
     background: #fff;
     top: 50%;
-    margin: -100px 0 0 0;
-/*    border: solid #333;*/
+    margin: 0 0 0 0;
+    /*    border: solid #333;*/
+    
     border-width: 3px 0 3px 0;
     opacity: 0.90;
     -moz-opacity: 0.90;
@@ -157,6 +163,7 @@ strong em {
     overflow: hidden;
     text-indent: 999em;
     line-height: 999em;
+    z-index: 20;
 }
 
 #content {
@@ -167,6 +174,7 @@ strong em {
     margin: 0 0 0 -282px;
     padding: 15px 0;
     top: 60px;
+    z-index: 30;
 }
 
 #footer {
@@ -198,6 +206,8 @@ strong em {
     
     -moz-border-radius: 7px;
     -webkit-border-radius: 7px;
+    border: 1px solid #333;
+    box-shadow: 2px 2px #333;
 }
 /* Just main menu links --[for non-javascript users this applies to submenu links as well]*/
 
@@ -314,7 +324,7 @@ strong em {
     position: absolute;
     list-style: none;
     margin: 0 0 0 0;
-    z-index: 5;
+    z-index: 100;
     top: 15px;
     left: 50%;
     text-align: center;
